회원 가입 페이지 추가

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <div th:fragment="footer">
-  <div class="footer">
+  <div class="footer"  style="position:relative; top: 10px;">
   &copy 2019 Copyright : dgahn@icloud.com
   </div>
 </div>
