--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,6 +41,11 @@ include 하는 것이다.
                     Sign In
                 </button>
             </form>
+            <div class="row" style="position:relative; top: 15px;">
+                <p class="col" style="text-align: right"><a href="/accounts/id/search">아이디 찾기</a></p>
+                <p class="col" style="text-align: center"><a href="/accounts/password/new">비밀번호 찾기</a></p>
+                <p class="col" style="text-align: left"><a href="/accounts/signUp">회원가입</a></p>
+            </div>
         </div>
     </div>
     <br>
