--- a/src/main/resources/templates/accounts/signUp.html
+++ b/src/main/resources/templates/accounts/signUp.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/header :: header"/>
 <body style="background: #f5f5f5">
-<div class="login-form"
+<div class="input-form-box"
      style="position: relative; top: 150px;">
     <div class="row">
         <div class="col" style="text-align: center">
@@ -19,7 +19,7 @@
                     실제 강의실을 예약할 수 없습니다.
                 </small>
             </p>
-            <form th:action="@{/accounts/signUp}"
+            <form th:action="@{/accounts/join}"
                   th:object="${form}"
                   method="post">
                 <div class="form-group">
@@ -28,14 +28,15 @@
                            class="form-control"
                            placeholder="아이디 (영문, 숫자로 구성된 4~10글자)"
                            pattern="[A-Za-z0-9]{4,10}" maxlength="10"
+                           onfocusout="test()"
                            required>
                 </div>
                 <div class="form-group">
-                    <input type="password"
+                    <input type="text"
                            th:field="*{password}"
                            class="form-control"
-                           placeholder="비밀번호 (영문, 숫자로 구성된 4~12글자)"
-                           pattern="[A-Za-z0-9]{4,10}" maxlength="12"
+                           placeholder="비밀번호 (영문, 숫자로 구성된 4~20글자)"
+                           pattern="[A-Za-z0-9]{4,20}" maxlength="20"
                            required>
                 </div>
                 <div class="form-group">
