--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <!--
 include 하는 것이다.
 -->
@@ -8,9 +8,10 @@ include 하는 것이다.
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body style="background: #f5f5f5">
-<div class="login-form"
+<div class="input-form-box"
      style="position: relative; top: 150px;">
-    <div class="row">
+    <div class="row"
+         sec:authorize="!isAuthenticated()">
         <div class="col" style="text-align: center">
             <img src="https://imgur.com/4vwylDC.png" alt="" style="width: 100px; margin: 30px auto">
             <h4 align="center">
@@ -25,28 +26,50 @@ include 하는 것이다.
                     실제 강의실을 예약할 수 없습니다.
                 </small>
             </p>
-            <form>
+            <form th:action="@{/}"
+                  th:object="${form}"
+                  method="post">
                 <div class="form-group">
                     <input type="text"
+                           th:field="*{id}"
                            class="form-control"
-                           placeholder="아이디">
+                           placeholder="아이디 (영문, 숫자로 구성된 4~10글자)"
+                           pattern="[A-Za-z0-9]{4,10}" maxlength="10"
+                           onfocusout="test()"
+                           required>
                 </div>
                 <div class="form-group">
-                    <input type="password"
+                    <input type="text"
+                           th:field="*{password}"
                            class="form-control"
-                           placeholder="비밀번호">
+                           placeholder="비밀번호 (영문, 숫자로 구성된 4~20글자)"
+                           pattern="[A-Za-z0-9]{4,20}" maxlength="20"
+                           required>
                 </div>
                 <button type="submit"
                         class="btn btn-primary btn-lg btn-block">
                     Sign In
                 </button>
+                <p style="position:relative; top: 15px; color:red;"
+                   th:text="${form.message != null} ? ${form.message}">someValue</p>
             </form>
             <div class="row" style="position:relative; top: 15px;">
                 <p class="col" style="text-align: right"><a href="/accounts/id/search">아이디 찾기</a></p>
                 <p class="col" style="text-align: center"><a href="/accounts/password/new">비밀번호 찾기</a></p>
-                <p class="col" style="text-align: left"><a href="/accounts/signUp">회원가입</a></p>
+                <p class="col" style="text-align: left"><a href="/accounts/join">회원가입</a></p>
             </div>
         </div>
+    </div>
+    <div sec:authorize="isAuthenticated()"
+         style="text-align: center">
+        <img src="https://imgur.com/wse77B5.png" alt="" style="width: 150px; margin: 30px auto">
+        <h2 style="margin: 20px auto;">Good Bye!</h2>
+
+        <form th:action="@{/logout}" method="post">
+            <input type="submit"
+                   value="Logout"
+                   style="border: none; background: none; color: blue; font-size: 20px;">
+        </form>
     </div>
     <br>
     <div th:replace="fragments/footer :: footer"></div>
