--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,13 +1,12 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<!--
-include 하는 것이다.
--->
 <head th:replace="fragments/header :: header">
     <title>Hello</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body style="background: #f5f5f5">
+<div sec:authorize="isAuthenticated()"
+     th:replace="fragments/navbar :: navbar" />
 <div class="input-form-box"
      style="position: relative; top: 150px;">
     <div class="row"
